--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2014-10-13  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* m4/gettext.m4: Upgrade to gettext-0.18.3.
+	* m4/iconv.m4: Upgrade to gettext-0.18.3.
+	* m4/lib-ld.m4: Upgrade to gettext-0.18.3.
+	* m4/lib-link.m4: Upgrade to gettext-0.18.3.
+	* m4/lib-prefix.m4: Upgrade to gettext-0.18.3.
+	* m4/nls.m4: Upgrade to gettext-0.18.3.
+	* m4/po.m4: Upgrade to gettext-0.18.3.
+	* m4/progtest.m4: Upgrade to gettext-0.18.3.
+	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
+
 2011-05-14  Johan Walles  <johan.walles@gmail.com>
 
 	* Lower CPU time footprint.
